// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressLoader snapshots should match snapshot for compact variant 1`] = `
<div>
  <div
    class="flex items-center gap-3 "
  >
    <span
      data-testid="loader-icon"
    >
      Loading
    </span>
    <span
      class="text-sm font-medium"
      style="color: rgb(28, 25, 23);"
    >
      Second Step
    </span>
  </div>
</div>
`;

exports[`ProgressLoader snapshots should match snapshot for inline variant 1`] = `
<div>
  <div
    class="p-4 rounded-lg "
    style="background-color: rgb(255, 255, 255); border: 1px solid #d6d3d1;"
  >
    <div
      class="mb-4"
    >
      <div
        class="h-1.5 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out"
          style="width: 33.33333333333333%; background-color: rgb(22, 101, 52);"
        />
      </div>
      <div
        class="flex justify-between mt-1.5"
      >
        <span
          class="text-xs"
          style="color: rgb(120, 113, 108);"
        >
          1
          /
          3
        </span>
        <span
          class="text-xs font-medium"
          style="color: rgb(28, 25, 23);"
        >
          33
          %
        </span>
      </div>
    </div>
    <div
      class="flex items-center gap-3"
    >
      <span
        data-testid="loader-icon"
      >
        Loading
      </span>
      <span
        class="text-sm font-medium"
        style="color: rgb(28, 25, 23);"
      >
        Second Step
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressLoader snapshots should match snapshot for modal variant 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-6 md:p-8 "
  >
    <h3
      class="text-lg md:text-xl font-bold uppercase tracking-wide mb-2 text-center"
      style="color: rgb(28, 25, 23);"
    >
      Creating Story
    </h3>
    <p
      class="text-xs md:text-sm mb-6 text-center max-w-md"
      style="color: rgb(120, 113, 108);"
    >
      Please wait
    </p>
    <div
      class="w-full max-w-md mb-6"
    >
      <div
        class="h-2 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 33.33333333333333%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 -translate-x-full animate-[shimmer_2s_infinite]"
          />
        </div>
      </div>
      <div
        class="flex justify-between mt-2"
      >
        <span
          class="text-xs font-medium"
          style="color: rgb(120, 113, 108);"
        >
          1
           of 
          3
           completed
        </span>
        <span
          class="text-sm font-bold"
          style="color: rgb(28, 25, 23);"
        >
          33
          %
        </span>
      </div>
    </div>
    <div
      class="w-full max-w-md space-y-3"
    >
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center transition-all duration-300"
          style="background-color: rgb(22, 101, 52);"
        >
          <span
            data-testid="check-icon"
          >
            Check
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 line-through opacity-60"
            style="color: rgb(120, 113, 108);"
          >
            First Step
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(22, 101, 52);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 scale-[1.02]"
        style="background-color: rgb(231, 229, 228); border: 2px solid #1c1917;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center relative"
          style="background-color: rgb(28, 25, 23);"
        >
          <span
            data-testid="book-icon"
          >
            Book
          </span>
          <div
            class="absolute inset-0 rounded-full border-2 border-t-transparent animate-spin"
            style="border-color: #ffffff40; border-top-color: transparent;"
          />
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 "
            style="color: rgb(28, 25, 23);"
          >
            Second Step
          </div>
          <div
            class="text-xs mt-1 animate-pulse"
            style="color: rgb(68, 64, 60);"
          >
            Processing...
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(214, 211, 209);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center border-2 transition-all duration-300"
          style="border-color: #d6d3d1; background-color: rgb(255, 255, 255);"
        >
          <span
            data-testid="users-icon"
          >
            Users
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 "
            style="color: rgb(120, 113, 108);"
          >
            Third Step
          </div>
        </div>
      </div>
    </div>
    <div
      class="mt-6 text-center animate-pulse"
      style="color: rgb(120, 113, 108);"
    >
      <span
        data-testid="sparkles-icon"
      >
        Sparkles
      </span>
      <span
        class="text-xs uppercase tracking-wider font-medium"
      >
        Second Step
      </span>
    </div>
  </div>
</div>
`;

exports[`ProgressLoader snapshots should match snapshot with all steps completed 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-6 md:p-8 "
  >
    <div
      class="w-full max-w-md mb-6"
    >
      <div
        class="h-2 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 100%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 -translate-x-full animate-[shimmer_2s_infinite]"
          />
        </div>
      </div>
      <div
        class="flex justify-between mt-2"
      >
        <span
          class="text-xs font-medium"
          style="color: rgb(120, 113, 108);"
        >
          3
           of 
          3
           completed
        </span>
        <span
          class="text-sm font-bold"
          style="color: rgb(28, 25, 23);"
        >
          100
          %
        </span>
      </div>
    </div>
    <div
      class="w-full max-w-md space-y-3"
    >
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center transition-all duration-300"
          style="background-color: rgb(22, 101, 52);"
        >
          <span
            data-testid="check-icon"
          >
            Check
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 line-through opacity-60"
            style="color: rgb(120, 113, 108);"
          >
            Step 1
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(22, 101, 52);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center transition-all duration-300"
          style="background-color: rgb(22, 101, 52);"
        >
          <span
            data-testid="check-icon"
          >
            Check
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 line-through opacity-60"
            style="color: rgb(120, 113, 108);"
          >
            Step 2
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(22, 101, 52);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center transition-all duration-300"
          style="background-color: rgb(22, 101, 52);"
        >
          <span
            data-testid="check-icon"
          >
            Check
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 line-through opacity-60"
            style="color: rgb(120, 113, 108);"
          >
            Step 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressLoader snapshots should match snapshot with all steps pending 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center p-6 md:p-8 "
  >
    <div
      class="w-full max-w-md mb-6"
    >
      <div
        class="h-2 rounded-full overflow-hidden"
        style="background-color: rgb(214, 211, 209);"
      >
        <div
          class="h-full rounded-full transition-all duration-500 ease-out relative overflow-hidden"
          style="width: 0%; background-color: rgb(22, 101, 52);"
        >
          <div
            class="absolute inset-0 -translate-x-full animate-[shimmer_2s_infinite]"
          />
        </div>
      </div>
      <div
        class="flex justify-between mt-2"
      >
        <span
          class="text-xs font-medium"
          style="color: rgb(120, 113, 108);"
        >
          0
           of 
          3
           completed
        </span>
        <span
          class="text-sm font-bold"
          style="color: rgb(28, 25, 23);"
        >
          0
          %
        </span>
      </div>
    </div>
    <div
      class="w-full max-w-md space-y-3"
    >
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center border-2 transition-all duration-300"
          style="border-color: #d6d3d1; background-color: rgb(255, 255, 255);"
        >
          <span
            data-testid="circle-icon"
          >
            Circle
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 "
            style="color: rgb(120, 113, 108);"
          >
            Step 1
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(214, 211, 209);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center border-2 transition-all duration-300"
          style="border-color: #d6d3d1; background-color: rgb(255, 255, 255);"
        >
          <span
            data-testid="circle-icon"
          >
            Circle
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 "
            style="color: rgb(120, 113, 108);"
          >
            Step 2
          </div>
        </div>
        <div
          class="absolute left-[1.4rem] md:left-[1.65rem] top-full w-0.5 h-3"
          style="background-color: rgb(214, 211, 209);"
        />
      </div>
      <div
        class="flex items-center gap-4 p-3 rounded-lg transition-all duration-300 "
        style="background-color: transparent; border: 2px solid transparent;"
      >
        <div
          class="w-8 h-8 md:w-10 md:h-10 rounded-full flex items-center justify-center border-2 transition-all duration-300"
          style="border-color: #d6d3d1; background-color: rgb(255, 255, 255);"
        >
          <span
            data-testid="circle-icon"
          >
            Circle
          </span>
        </div>
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="text-sm md:text-base font-medium transition-all duration-300 "
            style="color: rgb(120, 113, 108);"
          >
            Step 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
